Functionality connected with the Marvel api and all functional. :)

--- a/app/dashboard/character/character.html
+++ b/app/dashboard/character/character.html
@@ -1,14 +1,17 @@
 <div class="character">
   <div class="row">
-    <div class="col-xs-5 imagen-col">
-        <img src="http://i.annihil.us/u/prod/marvel/i/mg/c/e0/535fecbbb9784.jpg" alt="" class="img-post" >
+    <div class="col-xs-3 imagen-col">
+        <img ng-src="{{vm.characterDetails.thumbnail.path + '.' + vm.characterDetails.thumbnail.extension}}" alt="" class="img-responsive" >
     </div>
-    <div class="col-xs-7 info-comics">
-      <h3>{{CharacterDetails.name}}</h3>
-      <p>{{CharacterDetails.description}}</p>
+    <div class="col-xs-9 info-comics">
+      <h3>{{vm.characterDetails.name}}</h3>
+      <p>{{vm.characterDetails.description}}</p>
+      <a type="button" ng-href="{{vm.characterDetails.urls[0].url}}" class="btn btn-primary btn-group btn-md button-more more-button">Mas Detalles</a>
+      <a type="button" ng-href="{{vm.characterDetails.urls[1].url}}" class="btn btn-primary btn-group btn-md button-more wiki-button">Wiki {{vm.characterDetails.name}}</a>
+      <a type="button" ng-href="{{vm.characterDetails.urls[2].url}}" class="btn btn-primary btn-group btn-md button-more comiclick-button">Comiclick</a>
     </div>
   </div>
-  <div class="row">
+  <div class="row item-comic">
       <div class="col-xs-12 tabs">
         <uib-tabset active="active">
             <uib-tab index="0" select="alertMe()">
@@ -16,11 +19,11 @@
                   comics
                 </uib-tab-heading>
                 <div class="row">
-                  <button type="button" class="btn-group btn-md add-fav pull-right">Agregar 3 a favoritos</button>
+                  <button type="button" class="btn-group btn-md add-fav pull-right" ng-show="vm.characterDetails.series.items.lenght >0">Agregar 3 a favoritos</button>
                 </div>
-              <div class="row">
-                <div class="col-xs-4 items" ng-repeat="comic in CharacterDetails.comics.items" >
-                  <a class="item" ng-click="actions.OpenComicsDetailsModal(CharacterDetails.id)">{{comic.name}}</a>
+              <div class="row ">
+                <div class="col-xs-4 items" ng-repeat="comic in vm.characterDetails.comics.items" >
+                  <a class="item" ng-click="vm.actions.OpenComicsDetailsModal(comic.id)">{{comic.name}}</a>
                 </div>
               </div>
             </uib-tab>
@@ -29,8 +32,9 @@
                    Series
                 </uib-tab-heading>
                 <div class="row">
-                  <div class="col-xs-4 items" ng-repeat="comic in CharacterDetails.series.items" >
-                    <a class="item-series" >{{comic.name}}</a>
+                  <div class="col-xs-4 items" ng-repeat="series in vm.characterDetails.series.items" >
+                    <a class="item-series" >{{series.name}}</a>
+                    <a class="item-series" ng-show="vm.series.items.lenght === 0">No posee series disponibles</a>
                   </div>
                 </div>
             </uib-tab>
@@ -39,8 +43,8 @@
                        stories
                    </uib-tab-heading>
                    <div class="row">
-                     <div class="col-xs-4 items-series" ng-repeat="comic in CharacterDetails.stories.items" >
-                       <a class="item">{{comic.name}}</a>
+                     <div class="col-xs-4 items" ng-repeat="stories in vm.characterDetails.stories.items" >
+                       <a class="item-series">{{stories.name}}</a>
                      </div>
                    </div>
             </uib-tab>
